Fix profile icon size on mobile
References #21.

--- a/front-end/src/app/components/stats/stats.component.css
+++ b/front-end/src/app/components/stats/stats.component.css
@@ -23,7 +23,7 @@
 }
 
 .profile-icon {
-    max-width: 1.25%;
+    max-width: 30px;
 }
 
 .stat-section {
